[project]
name = "payload-test-runner"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nathan", email = "nathan@payload.com"},
]
dependencies = [
    "inquirer>=3.3.0",
    "psutil>=6.0.0",
    "requests>=2.32.3",
    "colorama>=0.4.6",
    "art>=6.2",
]
requires-python = "==3.9.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true


[tool.pdm.scripts]
_.env_file = ".env"
